--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,28 @@
-#name: AWS-access
-#
-#on:
-#  push:
-#    branches:
-#      - 'main'
-#jobs:
-#  scan-dockerfiles:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3.5.2
-#
-#      - name: Install Terraform
-#        uses: hashicorp/setup-terraform@v2.0.3
-#
-#      - name: Configure AWS Credentials
-#        uses: aws-actions/configure-aws-credentials@v2
-#        with:
-#            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}/
-#          aws-region: us-east-1
-#
-#      - name: Initialize Terraform
-#        run: terraform init
-#
-#      - name: plan Terraform
-#        run: terraform plan --auto-approve
+name: AWS-access
+
+on:
+  push:
+    branches:
+      - 'main'
+jobs:
+  scan-dockerfiles:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3.5.2
+
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v2.0.3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: us-east-1
+
+      - name: Initialize Terraform
+        run: terraform init
+
+      - name: plan Terraform
+        run: terraform apply --auto-approve
